integration_tests/codegen_fail/fail/scalar/mutliple_named_fields.stderr
error: GraphQL scalar expected exactly 1 field, e.g., Test { test: i32 } or all custom resolvers
 --> fail/scalar/mutliple_named_fields.rs:4:1
  |
4 | / struct Scalar {
5 | |     id: i32,
6 | |     another: i32,
7 | | }
  | |_^
